--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.memoryprofiler": "1.1.0",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.splines": "2.4.0",
